[package]
name = "rust_rest"
version = "0.1.0"
authors = ["ienery <ienery@yandex.ru>"]

[dependencies]
iron = "*"
rocksdb = { git = "https://github.com/paritytech/rust-rocksdb" }
router = "*"
params = "*"
serde_json = "*"
bodyparser = "*"
persistent = "*"
serde_derive = "*"
serde = "*"
rand = "0.4"
chrono = "0.4.0"
staticfile = "0.5.0"
mount = "0.4.0"
open = "1.2.1"
# hyper-native-tls = "0.2.4"
ws = "0.7.3"
time = "*"
database = { path = "src/database" }